--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       -run: npm install
-      -run: npm build
+      -run: npm run build
       
       - uses: jakejarvis/s3-sync-action@main
         with:
