--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -14,16 +14,18 @@ jobs:
         node-version: [15.x]
 
     steps:
-      - uses: actions/checkout@main
-      -run: npm install
-      -run: npm run build
-      -run: npm test
-      - uses: jakejarvis/s3-sync-action@main
-        with:
-          args: --acl public-read --follow-symlinks --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"
-          SOURCE_DIR: "build"
+      -name: checkout code
+        - uses: actions/checkout@v1
+          -run: npm install
+          -run: npm run build
+          -run: npm test
+      -name: deploy to S3
+        - uses: jakejarvis/s3-sync-action@main
+          with:
+            args: --acl public-read --follow-symlinks --delete
+          env:
+            AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: "us-east-1"
+            SOURCE_DIR: "build"
