--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -14,10 +14,10 @@ jobs:
         node-version: [15.x]
     
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@master
       - run: npm install
       - run: npm run build
-      - uses: jakejarvis/s3-sync-action@main
+      - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
