--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -10,6 +10,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
       - name: Install Dependencies
         run: npm install
       - name: Build 
