--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -6,25 +6,19 @@ on:
       - main
 
 jobs:
-  build:
-    name: Build
+  deploy:
+    name: deploy
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: ["12", "14", "16"]
-
+        node-version: [15.x]
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@master
       - run: npm install
         working-directory: frontend
       - run: npm run build
         working-directory: frontend
-
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
