--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         node-version: [15.x]
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
       - run: npm install
         working-directory: frontend
       - run: npm run build
