--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -12,9 +12,13 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [15.x]
+        node: [ '12', '14', '16' ]
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
       - run: npm install
         working-directory: frontend
       - run: npm run build
