--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -3,26 +3,21 @@ name: MKFormeller LLC
 on:
   push:
     branches:
-      - main
+      - "master"
 
 jobs:
-  deploy:
-    name: deploy
+  build:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node: [ '12', '14', '16' ]
+        node-version: [15.x]
+    
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node }}
+      - uses: actions/checkout@v1
       - run: npm install
-        working-directory: frontend
       - run: npm run build
-        working-directory: frontend
+      - run: npm test
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
@@ -30,5 +25,5 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1" # optional: defaults to us-east-1
-          SOURCE_DIR: "build" # optional: defaults to entire repository
+          AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
+          SOURCE_DIR: 'build'      # optional: defaults to entire repository
