--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -16,8 +16,11 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: npm install
+        working-directory: frontend
       - run: npm run build
+        working-directory: frontend
       - run: npm test
+        working-directory: frontend
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
