--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -8,19 +8,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [15.x]
-    
     steps:
-      - uses: actions/checkout@v1
-      - run: npm install
-        working-directory: frontend
-      - run: npm run build
-        working-directory: frontend
-      - run: npm test
-        working-directory: frontend
+      - uses: actions/checkout@v2 
+        with:
+          path: frontend
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      - run: yarn install
+
+      - run: yarn build
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
