--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-
       - run: yarn install
-
-      - run: yarn build
+        working-directory: frontend
+      - run: yarn build --if-present
+        working-directory: frontend
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
