--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -22,8 +22,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm i
+        working-directory: ./frontend
       - run: npm run build --if-present
-
+        working-directory: ./frontend
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
