--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -3,7 +3,7 @@ name: MKFormeller LLC CI/CD
 on:
   push:
     branches:
-      - main
+      - "main"
 
 jobs:
   build:
@@ -11,20 +11,17 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [15.x]
 
     steps:
-      - uses: actions/checkout@v2
-        with:
-          path: ./frontend
-      - name: use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm i
-        working-directory: ./frontend
-      - run: npm run build --if-present
-        working-directory: ./frontend
+      - uses: actions/checkout@v1
+      - run: npm install
+        working-directory: ./client
+      - run: npm run build
+        working-directory: ./client
+      - run: npm test
+        working-directory: ./client
+        
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
