--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -21,7 +21,16 @@ jobs:
         working-directory: ./client
       - run: npm test
         working-directory: ./client
-        
+
+    artifacts:
+      paths:
+        - build/
+
+  deploy:
+    runs-on: ubuntu-latest
+    dependencies:
+      - build
+    steps:
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
