--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -12,8 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: [15.x]
-
-    working-directory: ./client
+    working-directory: ~/client
     steps:
       - uses: actions/checkout@v1
       - run: npm install
