--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -8,7 +8,7 @@ on:
 defaults:
   run:
     working-directory: client
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,22 +16,34 @@ jobs:
     strategy:
       matrix:
         node-version: [15.x]
+
     steps:
       - uses: actions/checkout@v1
       - run: npm install
       - run: npm run build
       - run: npm test
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@master
-  #     - uses: jakejarvis/s3-sync-action@master
-  #       with:
-  #         args: --acl public-read --follow-symlinks --delete
-  #       env:
-  #         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         AWS_REGION: "us-east-1" # optional: defaults to us-east-1
-  #         SOURCE_DIR: "build" # optional: defaults to entire repository
+      - name: upload build folder from the result of this first job
+        uses: actions/upload-artifact@v2
+        with:
+          path: build
+
+  deploy:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Download build folder from result of job 1
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+
+      - uses: actions/checkout@master
+      - uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: "us-east-1" # optional: defaults to us-east-1
+          SOURCE_DIR: "build" # optional: defaults to entire repository
