--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build
+          path: client/build
 
       - uses: actions/checkout@master
       - uses: jakejarvis/s3-sync-action@master
@@ -47,4 +48,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: "us-east-1" # optional: defaults to us-east-1
-          SOURCE_DIR: "build" # optional: defaults to entire repository
+          SOURCE_DIR: "client/build" # optional: defaults to entire repository
