--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -23,21 +23,21 @@ jobs:
       - run: npm run build
       - run: npm test
 
-      - name: upload build folder from the result of this first job
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: client/build
+      # - name: upload build folder from the result of this first job
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: build
+      #     path: client/build
 
   deploy:
-    needs: build
+    # needs: build
+    needs: client/build
     runs-on: ubuntu-latest
     steps:
-      - name: Download build folder from result of job 1
-        uses: actions/download-artifact@v2
-        with:
-          name: build
-
+      # - name: Download build folder from result of job 1
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: build
       - uses: actions/checkout@master
       - uses: jakejarvis/s3-sync-action@master
         with:
@@ -47,4 +47,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: "us-east-1" # optional: defaults to us-east-1
-          SOURCE_DIR: "./build" # optional: defaults to entire repository
+          SOURCE_DIR: "client/build" # optional: defaults to entire repository
