build version 1 of frontend client & deploy to s3

--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -7,7 +7,7 @@ on:
 
 defaults:
   run:
-    working-directory: client
+    working-directory: frontend
 
 jobs:
   build:
@@ -21,12 +21,12 @@ jobs:
       - uses: actions/checkout@v1
       - run: npm install
       - run: npm run build
-      - run: npm test
+      # - run: npm test
       - name: upload build folder from the result of this first job
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: client/build
+          path: frontend/build
 
   deploy:
     needs: build
