--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -19,6 +19,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - run: npm cache clean --force
       - run: npm install
       - run: npm run build
       # - run: npm test
