--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -15,14 +15,20 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [15.x]
+        node-version: [12.x]
 
     steps:
-      - uses: actions/checkout@v1
-      - run: npm cache clean --force
-      - run: npm install
-      - run: npm run build
-      # - run: npm test
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm i, build and test
+        run: |
+          npm cache clean --force
+          npm i
+          npm test
+          npm run build --if-present
       - name: upload build folder from the result of this first job
         uses: actions/upload-artifact@v2
         with:
