--- a/.github/workflows/mkf-frontend.yml
+++ b/.github/workflows/mkf-frontend.yml
@@ -23,13 +23,13 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm i, build and test
+      - name: Install dependencies, run tests and build
         run: |
           npm cache clean --force
           rm -rf node_modules package-lock.json
           npm i
           npm run build --if-present
-      - name: upload build folder from the result of this first job
+      - name: Upload build folder to artifact
         uses: actions/upload-artifact@v2
         with:
           name: build
@@ -39,7 +39,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Download build folder from result of job 1
+      - name: Download build folder from artifact
         uses: actions/download-artifact@v2
         with:
           name: build
